--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,49 +1,50 @@
 {
-	"name": "web",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack --port=3001",
-		"build": "next build",
-		"start": "next start"
-	},
-	"dependencies": {
-		"@radix-ui/react-context-menu": "^2.2.16",
-		"@radix-ui/react-dialog": "^1.1.15",
-		"@radix-ui/react-popover": "^1.1.15",
-		"@radix-ui/react-select": "^2.2.6",
-		"@radix-ui/react-switch": "^1.2.6",
-		"@radix-ui/react-toggle": "^1.1.10",
-		"@tanstack/react-form": "^1.12.3",
-		"@tanstack/react-query": "^5.85.5",
-		"@trpc/client": "^11.5.0",
-		"@trpc/server": "^11.5.0",
-		"@trpc/tanstack-react-query": "^11.5.0",
-		"better-auth": "^1.3.7",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"date-fns": "^4.1.0",
-		"frimousse": "^0.3.0",
-		"lucide-react": "^0.542.0",
-		"motion": "^12.23.12",
-		"next": "15.5.0",
-		"next-themes": "^0.4.6",
-		"radix-ui": "^1.4.2",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-hotkeys-hook": "^5.1.0",
-		"sonner": "^2.0.5",
-		"tailwind-merge": "^3.3.1",
-		"tw-animate-css": "^1.3.4",
-		"zod": "^4.0.2"
-	},
-	"devDependencies": {
-		"@tailwindcss/postcss": "^4.1.10",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"tailwindcss": "^4.1.10",
-		"typescript": "^5",
-		"@tanstack/react-query-devtools": "^5.85.5"
-	}
+  "name": "web",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack --port=3001",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "server": "workspace:*",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@tanstack/react-form": "^1.12.3",
+    "@tanstack/react-query": "^5.85.5",
+    "@trpc/client": "^11.5.0",
+    "@trpc/server": "^11.5.0",
+    "@trpc/tanstack-react-query": "^11.5.0",
+    "better-auth": "^1.3.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "frimousse": "^0.3.0",
+    "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
+    "next": "15.5.0",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hotkeys-hook": "^5.1.0",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.4",
+    "zod": "^4.0.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5",
+    "@tanstack/react-query-devtools": "^5.85.5"
+  }
 }
