--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
     "drizzle-orm": "^0.44.2",
     "hono": "^4.8.2",
     "pg": "^8.14.1",
+    "url-metadata": "^5.2.2",
     "uuid": "^13.0.0",
     "zod": "^4.0.2"
   },
